--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.0.3",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.3",
     "vue": "^3.2.13",
+    "vue-animate-onscroll": "^1.0.8",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
