--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@primeuix/themes": "^1.0.3",
     "animate.css": "^4.1.1",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "primeflex": "^4.0.0",
@@ -17,6 +18,7 @@
     "primevue": "^4.3.3",
     "vue": "^3.2.13",
     "vue-animate-onscroll": "^1.0.8",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
